--- a/index.html
+++ b/index.html
@@ -937,9 +937,10 @@ Fast Crypto Swaps, Free of Custody
 <center>
 
 <p class="lead">
-<b>Thanks to our contributors!</b> 
-fifikobayashi, evaletolab, outkast2k, changenow, bitcoin.com api  
-referrers bitcoinbookmarks.com
+<b>Thanks to our contributors!</b> <br>
+fifikobayashi, evaletolab, outkast2k, changenow
+<br>
+referrers bitcoinbookmarks, bitcoin.com news
 
 <br><br>
   <iframe src="fundraise.html" width=450 height=800 frameborder=no>
